# test-task-for-MA

./: graphql_request.py  main_graphql.py  output.xlsx  pyproject.toml  readme.md  requirements.txt  utils.py
draft (legacy)/: main.py
